# pinyin

./: CMakeLists.txt  LICENSE  README.md  pinyin.hpp  test.cc
data/: additional.cc  dict.cc
